--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "lit-view",
   "displayName": "Lit View",
   "description": "Right-click a Lit TypeScript file to preview it in a webview.",
+  "icon": "media/lit-eye.svg",
+  "galleryBanner": {
+    "color": "#000000",
+    "theme": "dark"
+  },
   "version": "0.0.3",
   "engines": {
     "vscode": "^1.105.0"
@@ -10,8 +15,8 @@
     "Other"
   ],
   "activationEvents": [
+    "onStartupFinished",
     "onCommand:lit-view.previewLitFile",
-    "onCommand:workbench.view.extension.litViewPreview",
     "onView:litViewPreviewView",
     "onView:litViewMockView"
   ],
@@ -93,11 +98,11 @@
     "@typescript-eslint/parser": "^7.18.0",
     "@vscode/test-electron": "^2.4.1",
     "@vscode/vsce": "^3.7.1",
-    "eslint": "^8.56.0",
-    "typescript": "^5.9.3"
+    "eslint": "^8.56.0"
   },
   "dependencies": {
     "esbuild": "^0.27.0",
-    "lit": "^3.3.1"
+    "lit": "^3.3.1",
+    "typescript": "^5.9.3"
   }
 }
